# stdext

./: .gitignore  CMakeLists.txt  concept.txt  options.cpp  test.cpp
include/stdext/: stdext.h  stream.h  string.h
